<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.EditCardActivity">

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_default"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_default"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/colorButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_default"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/select_color"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerNameField" />

    <TextView
        android:id="@+id/addCardText"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/add_card"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/textview_default"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorTextLight"
        android:textCursorDrawable="@drawable/textview_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNameText" />

    <EditText
        android:id="@+id/customerNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/textview_default"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorTextLight"
        android:textCursorDrawable="@drawable/textview_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerNameText" />

    <TextView
        android:id="@+id/cardNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:labelFor="@id/cardNameField"
        android:text="@string/card_name"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardText" />

    <TextView
        android:id="@+id/customerNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:labelFor="@id/customerNameField"
        android:text="@string/customer_name"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNameField" />

    <TextView
        android:id="@+id/scannedCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/scanned_code"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorButton" />

    <ImageView
        android:id="@+id/codeView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scannedCodeText" />

</androidx.constraintlayout.widget.ConstraintLayout>